# mytime

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  Time-Block-Format.md  myday.py  mytime.ipynb  mytime.py  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: python-ci.yml
examples/: 2023-10-16.md  2023-10-17.md  2023-10-20.md  2024-08-15.md  2024-08-16.md  2024-08-19.md  2024-08-20.md  2024-08-21.md  2024-08-22.md  2024-08-23.md  2025-06-06.md  2025-07-16.md  README.md  other.md
tests/: test_myday.py  test_mytime.py
