[project]
name = "mytime"
version = "0.6.1"
description = "Add your description here"
authors = [
    { name = "Stephen Doyle", email = "stephendoyle75@gmail.com" }
]
dependencies = [
    "Click",
    "python-dateutil",
    "tabulate",
    "pandas>=2.2.2",
    "pendulum>=3.0.0",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"mytime" = "mytime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mytime"]
