[project]
name = "mytime"
description = "Utility for summarizing time entries from daily logs."
authors = [
    { name = "Stephen Doyle", email = "stephendoyle75@gmail.com" }
]
dependencies = [
    "Click",
    "python-dateutil",
    "tabulate",
    "pandas>=2.2.2",
    "pendulum>=3.0.0",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]

[project.scripts]
"mytime" = "mytime:mytime"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.dynamic]
version = {attr = "mytime.__version__"}

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.2",
]

[tool.hatch.version]
path = "version.py"

[tool.hatch.metadata]
allow-direct-references = true

