[project]
name = "mytime"
description = "Utility for summarizing time entries from daily logs."
authors = [
    { name = "Stephen Doyle", email = "stephendoyle75@gmail.com" }
]
dependencies = [
    "Click",
    "python-dateutil",
    "tabulate",
    "pandas>=2.2.2",
    "pendulum>=3.0.0",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]

[project.scripts]
"mytime" = "mytime:mytime"
"myday" = "myday:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.dynamic]
version = {attr = "mytime.__version__"}

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
]

# Same as black
line-length = 88
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Bladk, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Auto detect the appropriate line ending.
line-ending = "auto"

[tool.hatch.version]
path = "version.py"

[tool.hatch.metadata]
allow-direct-references = true
